# gitsplit

./: .envrc  .gitignore  pyproject.toml
src/gitsplit/: __init__.py  ai.py  cli.py  display.py  engine.py  git.py  models.py  patch.py  session.py  verification.py
src/gitsplit/phases/: __init__.py  discovery.py  execution.py  planning.py
