[project]
name = "gitsplit"
version = "0.1.0"
description = "AI-powered tool to split messy git branches into clean, atomic PRs"
readme = "README.md"
authors = [
    { name = "pallavbakshi", email = "pallavbakshi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich-click>=1.7.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "gitpython>=3.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
gitsplit = "gitsplit.cli:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
